fix: 모바일에서 홈화면 이미지가 안보이는 오류 수정, 홈화면 이미지 랜덤 삭제

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -1,7 +1,7 @@
 :root {
   /* Color */
   --vc-clr-primary: #b46856;
-  --vc-clr-secondary: #090f207f;
+  --vc-clr-secondary: #b1acab;
   --vc-clr-white: #ffffff;
 
   /* Icon */
